After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 692821 - shell: Fix search result activation on Return key press
shell: Fix search result activation on Return key press
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: shell
unspecified
Other All
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-01-29 17:48 UTC by Rui Matos
Modified: 2013-01-30 10:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: Fix search result activation on Return key press (3.21 KB, patch)
2013-01-29 17:48 UTC, Rui Matos
needs-work Details | Review
shell: Remove unused variable (973 bytes, patch)
2013-01-30 07:42 UTC, Rui Matos
committed Details | Review
shell: Fix search result activation on Return key press (1.37 KB, patch)
2013-01-30 07:44 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-01-29 17:48:19 UTC
Patch attached. I took the liberty of removing an unsused variable
without mentioning it while I was at it...
Comment 1 Rui Matos 2013-01-29 17:48:21 UTC
Created attachment 234768 [details] [review]
shell: Fix search result activation on Return key press
Comment 2 Bastien Nocera 2013-01-29 23:32:26 UTC
Review of attachment 234768 [details] [review]:

::: shell/gnome-control-center.c
@@ -87,3 @@
   gchar *filter_string;
 
-  guint32 last_time;

I'd rather this happened in a separate patch.

@@ +682,3 @@
+        }
+
+      on_search_row_activated (GTK_TREE_VIEW (priv->search_view), NULL, NULL, shell);

I don't really understand this patch.
on_search_row_activated () is the callback for the activate signal, which should get called when we call: gtk_icon_view_item_activated().

The only thing I could see missing is the setting of the selection (which I probably broke when I fixed another keyboard navigation related bug).
Comment 3 Rui Matos 2013-01-30 07:42:28 UTC
Created attachment 234803 [details] [review]
shell: Remove unused variable
Comment 4 Rui Matos 2013-01-30 07:44:37 UTC
Created attachment 234804 [details] [review]
shell: Fix search result activation on Return key press

--
(In reply to comment #2)
> -  guint32 last_time;
>
> I'd rather this happened in a separate patch.

Fair enough.

> @@ +682,3 @@
> +        }
> +
> +      on_search_row_activated (GTK_TREE_VIEW (priv->search_view), NULL, NULL,
> shell);
>
> I don't really understand this patch.
> on_search_row_activated () is the callback for the activate signal, which
> should get called when we call: gtk_icon_view_item_activated().
>
> The only thing I could see missing is the setting of the selection (which I
> probably broke when I fixed another keyboard navigation related bug).

Yeah, done that now. I was trying to avoid
gtk_tree_view_row_activated() since it needs a column and in this case
we don't really have one. But we can cheat and just user the 1st one.
Comment 5 Bastien Nocera 2013-01-30 09:31:57 UTC
Review of attachment 234803 [details] [review]:

++
Comment 6 Bastien Nocera 2013-01-30 09:33:41 UTC
Review of attachment 234804 [details] [review]:

Can you explain the changes made in the commit message as well? Looks fine otherwise.
Comment 7 Rui Matos 2013-01-30 10:29:11 UTC
(In reply to comment #6)
> Can you explain the changes made in the commit message as well?

Sure, hope it's ok.

Attachment 234803 [details] pushed as 75944f3 - shell: Remove unused variable
Attachment 234804 [details] pushed as 5357cde - shell: Fix search result activation on Return key press