shell: Remove unused variable

https://bugzilla.gnome.org/show_bug.cgi?id=692821